update read conf and update example

--- a/example/feature.color.label.conf
+++ b/example/feature.color.label.conf
@@ -1,13 +1,11 @@
 #feature_id	color	legend	label_conent(option)	label_size(option)	label_color(option)	label_position(option)	label_angle(option) distance_between_label_and_feature(option)
 #label_conent(option)    label_size(option)  label_color(option) label_position(option)  label_angle(option) distance_between_label_and_feature(option) 
 #those options default are:feature_id 10 black meddium_up	-45 1
+gene_s103	lime,YellowGreen	legend.s1.g	gene_s103.label
+gene_s103000	lime,YellowGreen	legend.s1i	gene_s103.label
+gene_s1030000	lime,Green	legend.s1	gene_s103000.label
 
-
-
-
-010CGL002104	#66CDAA	vanug	vanug 010CGL002104
-010CGL002117	#698B69	transposase	COG3645 010CGL002117
-010CGL002119	#698B69	transposase	COG3378 010CGL002119
-
-
+gene_s207	orange,Coral	legend.s2	gene_s207.label
+gene_s207000	orange,Coral	legend.s2	gene_s207000.label
+gene_s2070000	orange,Coral	legend.s2	gene_s2070000.label
 
