--- a/example/feature.crossing.link.conf
+++ b/example/feature.crossing.link.conf
@@ -1,7 +1,11 @@
-#gene_s103,gene_s203,gene_s303,gene_s403000
+gene_s103,gene_s203,gene_s303,gene_s403000
 
-#gene_s203,gene_s304
-#gene_s1060000,gene_s2100000,gene_s4100000
+gene_s107,gene_s207,gene_s307,gene_s4070000
 
-095CGL002369,155CGL002413,177AGL001608,201AGL002406
+gene_s110,gene_s210,gene_s310,gene_s4050000
 
+
+gene_s110,gene_s210,gene_s310,gene_s40500000
+
+gene_s203,gene_s304
+gene_s1060000,gene_s2100000,gene_s4100000
