update example and script

--- a/example/main.conf
+++ b/example/main.conf
@@ -3,7 +3,8 @@ color_feature_setting = feature.color.label.conf # *
 width_ratio_ref_cluster_legend = 0.1-0.75-0.15 # *
 
 top_bottom_margin = 0.1
-genome_height_ratio = 1.1 # mean genome height extend ratio
+#genome_height_ratio = 1.1 # mean genome height extend ratio
+genome_height_ratio = 0.5 # mean genome height extend ratio
 gene_height_ratio = 1.1 # mean gene arror height extend ratio
 space_ratio_between_blocks = 1.1 # mean space extend ratio of every blocks in tracks
 default_legend = other
@@ -12,13 +13,14 @@ sample_name_old2new = sample.name.new.conf
 sample_name_color_default = black
 sample_name_font_size_default = 15 
 
-color_feature_default = ForestGreen,LimeGreen
+color_feature_default = ForestGreen
 color_track_default = black
 legend_font_size = 18 #legend中文字字体大小
-legend_height_percent = 0.35 # legends的高度占整个图高度的比例
-legend_width_margin = 0.1 # legends左右两侧的margin
-legend_width_textpercent = 0.6 # legend内部的文字和arrow的比例，text是0.6则arrow是0.4
+legend_height_percent = 0.1 # legends的高度占整个图高度的比例
+legend_width_margin = 0.15 # legends左右两侧的margin
+legend_width_textpercent = 0.7 # legend内部的文字和arrow的比例，text是0.6则arrow是0.4
 crossing_link = feature.crossing.link.conf
+cross_link_color = rgb(255,222,173)
 
 
 #sort_by_one_feature = sort.feature # every track sort block's position by this feaure list(just only one feature for one track, if one traack not has one feature in this list , mean don't sort block's pos of this track )
