update example and script

--- a/example/main.conf
+++ b/example/main.conf
@@ -13,7 +13,7 @@ sample_name_old2new = sample.name.new.conf
 sample_name_color_default = black
 sample_name_font_size_default = 15 
 
-color_feature_default = ForestGreen
+color_feature_default = rgb(50,205,50)
 color_track_default = black
 legend_font_size = 18 #legend中文字字体大小
 legend_height_percent = 0.1 # legends的高度占整个图高度的比例
