--- a/example/main.conf
+++ b/example/main.conf
@@ -5,7 +5,7 @@ width_ratio_ref_cluster_legend = 0.1-0.75-0.15 # *
 top_bottom_margin = 0.1
 #genome_height_ratio = 1.1 # mean genome height extend ratio
 genome_height_ratio = 0.5 # mean genome height extend ratio
-gene_height_ratio = 1.1 # mean gene arror height extend ratio
+gene_height_ratio = 2 # mean gene arror height extend ratio
 space_ratio_between_blocks = 1.1 # mean space extend ratio of every blocks in tracks
 default_legend = other
 
@@ -26,4 +26,4 @@ cross_link_color = rgb(255,222,173)
 #sort_by_one_feature = sort.feature # every track sort block's position by this feaure list(just only one feature for one track, if one traack not has one feature in this list , mean don't sort block's pos of this track )
 #scaffold_order = order.list # if set this, will draw full-length of scaffold in gff, will ignore 4th col to last col of the --list
 
-
+pdf_dpi = 100
