--- a/example/main.conf
+++ b/example/main.conf
@@ -21,6 +21,7 @@ legend_width_margin = 0.15 # legends左右两侧的margin
 legend_width_textpercent = 0.7 # legend内部的文字和arrow的比例，text是0.6则arrow是0.4
 crossing_link = feature.crossing.link.conf
 cross_link_color = rgb(255,222,173)
+cross_link_opacity = 0.6
 
 
 #sort_by_one_feature = sort.feature # every track sort block's position by this feaure list(just only one feature for one track, if one traack not has one feature in this list , mean don't sort block's pos of this track )
