feature support arrow or rect

--- a/example/main.3.conf
+++ b/example/main.3.conf
@@ -1,8 +1,8 @@
-svg_width_height = 1500,800 # *
-color_feature_setting = feature.color.label.conf # *
+svg_width_height = 1500,400 # *
+#color_feature_setting = feature.color.label.conf 
 width_ratio_ref_cluster_legend = 0.1-0.75-0.15 # *
 feature_shape=rect # arrow, rect, round_rect
-track_color=blue # green or #02030
+track_color=black # green or #02030
 order_track_feature_label_link=0,1,2,3 # bigger mean upper 
 
 #pos_feature_label=medium_up # or medium_low or left_low or right_low or medium_medium or left_medium
@@ -19,7 +19,7 @@ shift_angle_closed_feature = 10
 top_bottom_margin = 0.1 # 高度上 top和bottom占的比例
 #genome_height_ratio = 1.1 # mean genome height extend ratio
 genome_height_ratio = 0.5 # mean genome height extend ratio
-gene_height_ratio = 2 # mean gene arror height extend ratio
+gene_height_ratio = 5 # mean gene arror height extend ratio
 space_ratio_between_blocks = 1.1 # mean space extend ratio of every blocks in tracks
 default_legend = other
 
@@ -27,13 +27,14 @@ sample_name_old2new = sample.name.new.conf
 sample_name_color_default = black
 sample_name_font_size_default = 15 
 
-color_feature_default = rgb(50,205,50)
+#color_feature_default = rgb(50,205,50)
+color_feature_default = blue
 color_track_default = black
 legend_font_size = 18 #legend中文字字体大小
 legend_height_percent = 0.1 # legends的高度占整个图高度的比例
 legend_width_margin = 0.15 # legends左右两侧的margin
 legend_width_textpercent = 0.7 # legend内部的文字和arrow的比例，text是0.6则arrow是0.4
-crossing_link = feature.crossing.link.conf
+#crossing_link = feature.crossing.link.conf
 cross_link_color = rgb(255,222,173)
 cross_link_opacity = 0.6
 
