--- a/example/main.2.conf
+++ b/example/main.2.conf
@@ -33,7 +33,7 @@ legend_font_size = 18 #legend中文字字体大小
 legend_height_percent = 0.1 # legends的高度占整个图高度的比例
 legend_width_margin = 0.15 # legends左右两侧的margin
 legend_width_textpercent = 0.7 # legend内部的文字和arrow的比例，text是0.6则arrow是0.4
-crossing_link = feature.crossing.link.conf
+#crossing_link = feature.crossing.link.conf
 cross_link_color = rgb(255,222,173)
 cross_link_opacity = 0.6
 
