--- a/example/main.conf
+++ b/example/main.conf
@@ -1,7 +1,7 @@
 svg_width_height = 1500,800 # *
 color_feature_setting = feature.color.label.conf # *
 width_ratio_ref_cluster_legend = 0.1-0.75-0.15 # *
-feature_shape=rect # arrow, rect, round_rect
+feature_shape=arrow  # arrow, rect, round_rect
 track_color=blue # green or #02030
 order_track_feature_label_link=0,1,2,3 # bigger mean upper 
 
