--- a/example/main.conf
+++ b/example/main.conf
@@ -37,7 +37,7 @@ cross_link_opacity = 0.6
 #sort_by_one_feature = sort.feature # every track sort block's position by this feaure list(just only one feature for one track, if one traack not has one feature in this list , mean don't sort block's pos of this track )
 #scaffold_order = order.list # if set this, will draw full-length of scaffold in gff, will ignore 4th col to last col of the --list
 
-scale_display=yes # yes or no
+scale_display=no # yes or no
 scale_position=low # up or low
 
 pdf_dpi = 100
