--- a/example/main.2.conf
+++ b/example/main.2.conf
@@ -42,3 +42,5 @@ cross_link_opacity = 0.6
 #scaffold_order = order.list # if set this, will draw full-length of scaffold in gff, will ignore 4th col to last col of the --list
 
 pdf_dpi = 100
+scale_display=no # yes or no
+scale_position=low # up or low
