--- a/example/main.3.conf
+++ b/example/main.3.conf
@@ -43,3 +43,5 @@ cross_link_opacity = 0.6
 #scaffold_order = order.list # if set this, will draw full-length of scaffold in gff, will ignore 4th col to last col of the --list
 
 pdf_dpi = 100
+scale_display=yes # yes or no
+scale_position=low # up or low
