--- a/example/main.fake.conf
+++ b/example/main.fake.conf
@@ -1,9 +1,14 @@
 svg_width_height = 1500,800 # *
-color_feature_setting = feature.color.label.conf # *
+#color_feature_setting = feature.color.label.conf # *
 width_ratio_ref_cluster_legend = 0.1-0.75-0.15 # *
-feature_shape=arrow  # arrow, rect, round_rect
+feature_shape=rect  # arrow, rect, round_rect
 track_color=blue # green or #02030
-order_track_feature_label_link=0,1,2,3 # bigger mean upper 
+
+track_order=0
+feature_order=1
+feature_label_order=3
+cross_link_order=2 # bigger mean upper 
+show_feature=yes # no or yes
 
 pos_feature_label=medium_up # or medium_low or left_low or right_low or medium_medium or left_medium
 padding_feature_label = 2 # space between feature and label
@@ -13,8 +18,8 @@ shift_angle_closed_feature = 10
 
 top_bottom_margin = 0.1 # 高度上 top和bottom占的比例
 #genome_height_ratio = 1.1 # mean genome height extend ratio
-genome_height_ratio = 0.5 # mean genome height extend ratio
-gene_height_ratio = 2 # mean gene arror height extend ratio
+genome_height_ratio = 1 # mean genome height extend ratio
+gene_height_ratio = 1 # mean gene arror height extend ratio
 space_ratio_between_blocks = 1.1 # mean space extend ratio of every blocks in tracks
 default_legend = other
 
@@ -28,6 +33,8 @@ legend_font_size = 18 #legend中文字字体大小
 legend_height_percent = 0.1 # legends的高度占整个图高度的比例
 legend_width_margin = 0.15 # legends左右两侧的margin
 legend_width_textpercent = 0.7 # legend内部的文字和arrow的比例，text是0.6则arrow是0.4
+legend_stroke_color=black
+legend_stroke_width=0
 crossing_link = feature.crossing.link.fake.conf
 cross_link_color = rgb(255,222,173)
 cross_link_opacity = 0.6
@@ -37,3 +44,4 @@ cross_link_opacity = 0.6
 #scaffold_order = order.list # if set this, will draw full-length of scaffold in gff, will ignore 4th col to last col of the --list
 
 pdf_dpi = 100
+
