--- a/example/main.conf
+++ b/example/main.conf
@@ -9,18 +9,18 @@ feature_setting = feature.color.label.conf # *
 # figure width layout
 width_ratio_ref_cluster_legend = 0.1-0.75-0.15 # *
 
-# figure shape
-feature_shape=arrow  # arrow, rect, round_rect
 
 
 ## global setting start, specific setting in feature_setting
+feature_shape=arrow  # arrow, rect, round_rect, figure shape
+feature_arrow_width_extent=0.3
 feature_label_size=10
 feature_label_color=black
 feature_height_ratio=2
 track_color=blue # green or #02030
 feature_color = rgb(50,205,50)
 genome_height_ratio=1 # mean genome height extend ratio
-feature_arrow_sharp_tend=0.7 # bigger mean sharper arrow
+feature_arrow_sharp_extent=0.7 # bigger mean sharper arrow
 # order for display
 track_order=1
 feature_order=2
@@ -45,7 +45,7 @@ distance_closed_feature=200 # xxbp, if the distancetwo feature is too close, so 
 shift_angle_closed_feature = 10
 
 # layout
-top_bottom_margin = 0.1 # 高度上 top和bottom占的比例
+top_bottom_margin = 0.1 # 高度上 top和bottom占的比例,top和bottom可能有scale
 space_between_blocks = 500 # bp, mean space of every block in one track
 default_legend = other
 
@@ -67,7 +67,7 @@ legend_stroke_width=0.5
 
 # crossling among features
 crossing_link = feature.crossing.link.conf
-cross_link_color = rgb(255,222,173)
+cross_link_color = #FF8C00
 cross_link_opacity = 1
 cross_link_anchor_pos = low_up # up,medium,low
 ignore_sharp_arrow=no # yes or no
@@ -78,6 +78,14 @@ ignore_sharp_arrow=no # yes or no
 #scaffold_order = order.list # if set this, will draw full-length of scaffold in gff, will ignore 4th col to last col of the --list
 
 # scale
-scale_display=no # yes or no
-scale_position=low # up or low
-
+scale_display=yes # yes or no
+scale_position=low_up # up or low or up_low
+scale_color=green
+scale_width=0.5
+scale_ratio=2000 # bp
+scale_padding_y=0.1
+scale_tick_opacity=0.5
+scale_tick_height=0.9
+scale_order=-1
+scale_tick_padding_y=15
+scale_tick_fontsize=13
