update the example conf and script

--- a/example/main.conf
+++ b/example/main.conf
@@ -12,7 +12,7 @@ width_ratio_ref_cluster_legend = 0.1-0.75-0.15 # *
 
 
 ## global setting start, specific setting in feature_setting
-feature_shape=arrow  # arrow, rect, round_rect, figure shape
+feature_shape=arrow  # only arrow, rect for figure shape, not support round_rect yet
 feature_arrow_width_extent=0.3
 feature_label_size=10
 feature_label_color=black
@@ -28,7 +28,7 @@ feature_label_order=4
 cross_link_order=0 # bigger mean upper 
 display_feature=yes # no or yes
 # whether dispaly feature label
-display_feature_label=yes # yes or no
+display_feature_label=yes # yes or no or yes,no or no,yes
 # feature_label 9 kinds of positon
 pos_feature_label=medium_up # or medium_low or left_low or right_low or medium_medium or left_medium
 # padding between feature and label
