--- a/example/main.3.1.conf
+++ b/example/main.3.1.conf
@@ -78,8 +78,8 @@ ignore_sharp_arrow=no # yes or no
 #scaffold_order = order.list # if set this, will draw full-length of scaffold in gff, will ignore 4th col to last col of the --list
 
 # scale
-scale_display=no # yes or no
-scale_position=up # up or low or up_low
+scale_display=yes # yes or no
+scale_position=low # up or low or up_low
 scale_color=green
 scale_width=0.5
 scale_ratio=2000 # bp
