--- a/example/main.3.1.conf
+++ b/example/main.3.1.conf
@@ -16,7 +16,7 @@ feature_shape=rect  # only arrow, rect for figure shape, not support round_rect 
 feature_arrow_width_extent=0.3
 feature_label_size=10
 feature_label_color=black
-feature_height_ratio=0.99 # defined feature height
+feature_height_ratio=0.9 # defined feature height
 track_color=blue # green or #02030
 feature_color = rgb(50,205,50)
 genome_height_ratio=1 # mean genome height extend ratio
@@ -36,6 +36,11 @@ pos_feature_label=medium_up # or medium_low or left_low or right_low or medium_m
 padding_feature_label = 2 # space between feature and label
 # freature label rotate angle
 label_rotate_angle=-50
+# display or conceal the connect line between same scaffold
+connect_with_same_scaffold=no
+connect_stroke_dasharray=2,5
+connect_stroke_width=2
+connect_stroke_color=black
 ## global setting end, specific setting in feature_setting
 
 
