--- a/example/main.3.1.conf
+++ b/example/main.3.1.conf
@@ -41,6 +41,7 @@ connect_with_same_scaffold=no
 connect_stroke_dasharray=2,5
 connect_stroke_width=2
 connect_stroke_color=black
+absolute_postion_in_title=yes
 ## global setting end, specific setting in feature_setting
 
 
