--- a/example/main.3.2.conf
+++ b/example/main.3.2.conf
@@ -1,10 +1,10 @@
 # output figure size
-svg_width_height = 1500,800 # *
+svg_width_height = 1500,400 # *
 pdf_dpi = 100
 
 # plot feature type
 feature_keywords = gene,xxxxx,xxxxx # *
-feature_setting = feature.color.label.conf # *
+feature_setting = feature.color.label.conf3.2 # *
 
 # figure width layout
 width_ratio_ref_cluster_legend = 0.1-0.75-0.15 # *
@@ -12,11 +12,12 @@ width_ratio_ref_cluster_legend = 0.1-0.75-0.15 # *
 
 
 ## global setting start, specific setting in feature_setting
-feature_shape=arrow  # only arrow, rect for figure shape, not support round_rect yet
+feature_shape=rect  # only arrow, rect for figure shape, not support round_rect yet
 feature_arrow_width_extent=0.3
 feature_label_size=10
 feature_label_color=black
-feature_height_ratio=2
+feature_shift_y=0
+feature_height_ratio=0.9 # defined feature height
 track_color=blue # green or #02030
 feature_color = rgb(50,205,50)
 genome_height_ratio=1 # mean genome height extend ratio
@@ -28,7 +29,7 @@ feature_label_order=4
 cross_link_order=0 # bigger mean upper 
 display_feature=yes # no or yes
 # whether dispaly feature label
-display_feature_label=yes,no # yes or no or yes,no or no,yes
+display_feature_label=no # yes or no or yes,no or no,yes
 # feature_label 9 kinds of positon
 pos_feature_label=medium_up # or medium_low or left_low or right_low or medium_medium or left_medium
 # padding between feature and label
@@ -37,8 +38,8 @@ padding_feature_label = 2 # space between feature and label
 # freature label rotate angle
 label_rotate_angle=-50
 # display or conceal the connect line between same scaffold
-connect_with_same_scaffold=yes
-connect_stroke_dasharray=2,2
+connect_with_same_scaffold=no
+connect_stroke_dasharray=2,5
 connect_stroke_width=2
 connect_stroke_color=black
 absolute_postion_in_title=yes
@@ -51,7 +52,7 @@ distance_closed_feature=200 # xxbp, if the distancetwo feature is too close, so 
 shift_angle_closed_feature = 10
 
 # layout
-top_bottom_margin = 0.1 # 高度上 top和bottom占的比例,top和bottom可能有scale
+top_bottom_margin = 0.2 # 高度上 top和bottom占的比例,top和bottom可能有scale
 space_between_blocks = 500 # bp, mean space of every block in one track
 default_legend = other
 
@@ -64,15 +65,15 @@ sample_name_font_size_default = 15
 # legend
 display_legend=yes # yes or other
 legend_font_size = 20 #legend中文字字体大小
-legend_height_ratio = 1 # compare with feature height
+legend_height_ratio = 0.7 # compare with feature height
 legend_width_margin = 0.15 # legends左右两侧的margin
-legend_height_space = 0.2
+legend_height_space = 0.1
 legend_width_textpercent = 0.7 # legend内部的文字和arrow的比例，text是0.6则arrow是0.4
 legend_stroke_color=black
 legend_stroke_width=0.5
 
 # crossling among features
-crossing_link = feature.crossing.link.conf
+#crossing_link = feature.crossing.link.conf
 cross_link_color = #FF8C00
 cross_link_opacity = 1
 cross_link_anchor_pos = low_up # up,medium,low
@@ -85,7 +86,7 @@ ignore_sharp_arrow=no # yes or no
 
 # scale
 scale_display=yes # yes or no
-scale_position=low_up # up or low or up_low
+scale_position=low # up or low or up_low
 scale_color=green
 scale_width=0.5
 scale_ratio=2000 # bp
