--- a/example/main.conf
+++ b/example/main.conf
@@ -36,6 +36,12 @@ pos_feature_label=medium_up # or medium_low or left_low or right_low or medium_m
 padding_feature_label = 2 # space between feature and label
 # freature label rotate angle
 label_rotate_angle=-50
+# display or conceal the connect line between same scaffold
+connect_with_same_scaffold=yes
+connect_stroke_dasharray=2,5
+connect_stroke_width=2
+connect_stroke_color=black
+absolute_postion_in_title=yes
 ## global setting end, specific setting in feature_setting
 
 
