--- a/example/feature.color.label.conf
+++ b/example/feature.color.label.conf
@@ -21,7 +21,7 @@ gene_s1030000	track_order	5
 gene_s1030000	feature_height_ratio	4
 gene_s1030000	feature_arrow_width_extent	1
 gene_s1030000	feature_arrow_sharp_extent	0.6
-
+gene_s1030000	feature_opacity	1
 
 
 
@@ -34,9 +34,12 @@ gene_s206000	feature_color	rgb(255,165,0)
 gene_s206000	legend_label	legend.s2
 gene_s206000	feature_label	gene_s206000.label
 gene_s206000	feature_shape	rect
+gene_s206000	feature_opacity	0.5
 
 
 gene_s2070000	feature_color	rgb(255,165,0)
 gene_s2070000	legend_label	legend.s2
 gene_s2070000	feature_label	gene_s2070000.label
+gene_s2070000	feature_arrow_width_extent	0.4
+gene_s2070000	feature_arrow_sharp_extent	0
 
