--- a/example/main.conf
+++ b/example/main.conf
@@ -14,13 +14,14 @@ width_ratio_ref_cluster_legend = 0.1-0.75-0.15 # *
 ## global setting start, specific setting in feature_setting
 feature_shape=arrow  # only arrow, rect for figure shape, not support round_rect yet
 feature_arrow_width_extent=0.3
-feature_label_size=10
+feature_label_size=12
 feature_label_color=black
 feature_height_ratio=2
+feature_opacity=0.8
 track_color=blue # green or #02030
 feature_color = rgb(50,205,50)
 genome_height_ratio=1 # mean genome height extend ratio
-feature_arrow_sharp_extent=0.7 # bigger mean sharper arrow
+feature_arrow_sharp_extent=0 # bigger mean sharper arrow
 # order for display
 track_order=1
 feature_order=2
@@ -35,7 +36,7 @@ pos_feature_label=medium_up # or medium_low or left_low or right_low or medium_m
 # padding between feature and label
 padding_feature_label = 2 # space between feature and label
 # freature label rotate angle
-label_rotate_angle=-50
+label_rotate_angle=-30
 # display or conceal the connect line between same scaffold
 connect_with_same_scaffold=yes
 connect_stroke_dasharray=2,5
@@ -47,8 +48,8 @@ absolute_postion_in_title=yes
 
 
 # if less this, will trigger auto shift feature label
-distance_closed_feature=200 # xxbp, if the distancetwo feature is too close, so sparate with shift_angle_closed_feature
-shift_angle_closed_feature = 10
+distance_closed_feature=10 # xxbp, if the distancetwo feature is too close, so sparate with shift_angle_closed_feature
+shift_angle_closed_feature = 15
 
 # layout
 top_bottom_margin = 0.1 # 高度上 top和bottom占的比例,top和bottom可能有scale
@@ -74,8 +75,8 @@ legend_stroke_width=0.5
 # crossling among features
 crossing_link = feature.crossing.link.conf
 cross_link_color = #FF8C00
-cross_link_opacity = 1
-cross_link_anchor_pos = low_up # up,medium,low
+cross_link_opacity = 0.6
+cross_link_anchor_pos = medium_medium # up,medium,low
 ignore_sharp_arrow=no # yes or no
 
 
