--- a/example/main.conf
+++ b/example/main.conf
@@ -75,14 +75,16 @@ legend_stroke_width=0.5
 # crossling among features
 crossing_link = feature.crossing.link.conf
 cross_link_color = #FF8C00
+cross_link_color_reverse = #3CB371
 cross_link_opacity = 0.6
 cross_link_anchor_pos = medium_medium # up,medium,low
+cross_link_orientatation=forward
 ignore_sharp_arrow=no # yes or no
 
 
 
 #sort_by_one_feature = sort.feature # every track sort block's position by this feaure list(just only one feature for one track, if one traack not has one feature in this list , mean don't sort block's pos of this track )
-#scaffold_order = order.list # if set this, will draw full-length of scaffold in gff, will ignore 4th col to last col of the --list
+tracks_reorder=track.order.txt
 
 # scale
 scale_display=yes # yes or no
