--- a/example/feature.crossing.link.conf
+++ b/example/feature.crossing.link.conf
@@ -4,9 +4,12 @@ gene_s203	gene_s303	cross_link_color	#3CB371
 gene_s203	gene_s303	cross_link_order	0
 gene_s203	gene_s303	cross_link_anchor_pos	medium_medium
 gene_s203	gene_s303	cross_link_opacity	0.5
+#gene_s203	gene_s303	cross_link_orientatation	forward
+gene_s203	gene_s303	cross_link_orientatation	reverse
 
 
-gene_s107,gene_s207,gene_s307,gene_s4070000
+gene_s107,gene_s207,gene_s307,
+gene_s307	gene_s4070000	cross_link_orientatation	reverse
 
 gene_s110,gene_s210,gene_s310,gene_s4050000
 gene_s110	gene_s210	cross_link_color	#00BFFF	
