--- a/example/main.9.conf
+++ b/example/main.9.conf
@@ -12,18 +12,18 @@ width_ratio_ref_cluster_legend = 0.1-0.75-0.15 # *
 
 
 ## global setting start, specific setting in feature_setting
-feature_shape=rect  # only arrow, rect for figure shape, not support round_rect and circle_point yet
+feature_shape=arrow  # only arrow, rect for figure shape, not support round_rect and circle_point yet
 feature_arrow_width_extent=0.3
 feature_label_size=10
 feature_label_color=black
 feature_shift_y=0
-feature_height_ratio=0.98 # defined feature height
+feature_height_ratio=10 # defined feature height
 track_color=blue # green or #02030
 feature_color=rgb(50,205,50)
 feature_border_size=0
 feature_border_color=black 
-genome_height_ratio=1 # mean genome height extend ratio
-feature_arrow_sharp_extent=0.7 # bigger mean sharper arrow
+genome_height_ratio=0.1 # mean genome height extend ratio
+feature_arrow_sharp_extent=5 # bigger mean sharper arrow
 # order for display
 track_order=1
 feature_order=2
