--- a/example/main.8.conf
+++ b/example/main.8.conf
@@ -17,7 +17,7 @@ feature_arrow_width_extent=0.3
 feature_label_size=10
 feature_label_color=black
 feature_height_ratio=2
-track_color=blue # green or #02030
+track_style= fill:blue # green or #02030
 #feature_color = #87CEEB,,#4682B4
 feature_color = rgb(50,215,50),,rgb(50,100,50)
 genome_height_ratio=1 # mean genome height extend ratio
