--- a/example/main.9.conf
+++ b/example/main.9.conf
@@ -18,7 +18,7 @@ feature_label_size=10
 feature_label_color=black
 feature_shift_y=0
 feature_height_ratio=10 # defined feature height
-track_color=blue # green or #02030
+track_style= fill:blue # fill:blue;stroke:pink;stroke-width:5;fill-opacity:0.1;stroke-opacity:0.9
 feature_color=rgb(50,205,50)
 feature_border_size=0
 feature_border_color=black 
