--- a/example/main.fake.conf
+++ b/example/main.fake.conf
@@ -2,7 +2,7 @@ svg_width_height = 1500,800 # *
 #color_feature_setting = feature.color.label.conf # *
 width_ratio_ref_cluster_legend = 0.1-0.75-0.15 # *
 feature_shape=rect  # arrow, rect, round_rect
-track_color=blue # green or #02030
+track_style= fill:blue # green or #02030
 
 track_order=0
 feature_order=1
