--- a/example/feature.crossing.link.conf
+++ b/example/feature.crossing.link.conf
@@ -12,7 +12,7 @@ gene_s107,gene_s207,gene_s307,
 gene_s307	gene_s4070000	cross_link_orientatation	reverse
 
 gene_s110,gene_s210,gene_s310,gene_s4050000
-gene_s110	gene_s210	cross_link_color	#00BFFF	
+gene_s110	gene_s210	cross_link_color	#00BFFF
 gene_s110	gene_s210	cross_link_opacity	0.8
 
 gene_s203,gene_s304
@@ -20,3 +20,6 @@ gene_s1060000,gene_s2100000,gene_s4100000
 
 gene_s2100000	gene_s4100000	cross_link_opacity	0.3
 gene_s2100000	gene_s4100000	cross_link_anchor_pos	low_up
+
+gene_s403,gene_s409
+
