--- a/example/main.conf
+++ b/example/main.conf
@@ -18,7 +18,7 @@ feature_label_size=12
 feature_label_color=black
 feature_height_ratio=2
 feature_opacity=0.8
-track_style=blue # green or #02030
+track_style=fill:blue # green or #02030
 feature_color = rgb(50,205,50)
 genome_height_ratio=1 # mean genome height extend ratio
 feature_arrow_sharp_extent=0 # bigger mean sharper arrow
