--- a/example/main.9.conf
+++ b/example/main.9.conf
@@ -17,6 +17,7 @@ feature_arrow_width_extent=0.3
 feature_label_size=10
 feature_label_color=black
 feature_shift_y=0
+feature_shift_x=0 # bp
 feature_height_ratio=10 # defined feature height
 track_style= fill:blue # fill:blue;stroke:pink;stroke-width:5;fill-opacity:0.1;stroke-opacity:0.9
 feature_color=rgb(50,205,50)
@@ -55,7 +56,7 @@ shift_angle_closed_feature = 10
 
 # layout
 top_bottom_margin = 0.2 # 高度上 top和bottom占的比例,top和bottom可能有scale
-space_between_blocks = 500 # bp, mean space of every block in one track
+space_between_blocks = 100 # bp, mean space of every block in one track
 default_legend = other
 
 # new sample name
@@ -75,7 +76,7 @@ legend_stroke_color=black
 legend_stroke_width=0.5
 
 # crossling among features
-#crossing_link = feature.crossing.link.conf
+crossing_link = feature.crossing.link.conf9
 cross_link_color = #FF8C00
 cross_link_opacity = 1
 cross_link_anchor_pos = low_up # up,medium,low
