--- a/example/feature.color.label.conf
+++ b/example/feature.color.label.conf
@@ -1,6 +1,6 @@
 #those options default are:feature_id 10 black medium_up	-45 1
 #feature_label_size,feature_label_color,pos_feature_label,label_rotate_angle,padding_feature_label,feature_order,feature_label_order,feature_height_ratio
-gene_s103000	feature_color	blue
+gene_s103000	feature_color	black
 gene_s103000	legend_label	legend.s1i
 gene_s103000	feature_label	gene_s103000.label
 gene_s103000	feature_order	1
@@ -11,7 +11,7 @@ gene_s1030000	feature_color	red
 gene_s1030000	legend_label	legend.s1
 gene_s1030000	feature_label	gene_s1030000.label
 gene_s1030000	feature_label_size	15
-gene_s1030000	feature_label_color	green
+gene_s1030000	feature_label_color	blue
 gene_s1030000	pos_feature_label	medium_low
 gene_s1030000	label_rotate_angle	60
 gene_s1030000	padding_feature_label	6
