--- a/example/main.9.conf
+++ b/example/main.9.conf
@@ -81,6 +81,9 @@ cross_link_color = #FF8C00
 cross_link_opacity = 1
 cross_link_anchor_pos = low_up # up,medium,low
 ignore_sharp_arrow=no # yes or no
+cross_link_position_ellipse=up
+cross_link_shape=rect # ellipse or v or rect
+cross_link_height_ellipse=10,8 # 10 and 8 is the radius of outter ellipse and inner ellipse
 
 
 
