--- a/example/main.9.conf
+++ b/example/main.9.conf
@@ -1,13 +1,15 @@
 # output figure size
 svg_width_height = 1500,400 # *
 pdf_dpi = 100
+svg_background_color = white #background color of whole figure
 
 # plot feature type
 feature_keywords = gene,circle,xxxxx # *, gene,point,hist,heatmap
 feature_setting = feature.color.label.conf9 # *
 
 # figure width layout
-width_ratio_ref_cluster_legend = 0.1-0.75-0.15 # *
+width_ratio_ref_cluster_legend = 0.1-0.75-0.15 # 0.1+0.75+0.15=1
+
 
 
 
@@ -16,8 +18,9 @@ feature_shape=arrow  # only arrow, rect for figure shape, not support round_rect
 feature_arrow_width_extent=0.3
 feature_label_size=10
 feature_label_color=black
-feature_shift_y=0
-feature_shift_x=0 # bp
+feature_shift_y=0 # unit is feature_shift_y_unit 
+feature_shift_y_unit=backbone # backbone or radius, backbone is genome_height_ratio
+feature_shift_x=0 # unit is bp
 feature_height_ratio=10 # defined feature height
 track_style= fill:blue # fill:blue;stroke:pink;stroke-width:5;fill-opacity:0.1;stroke-opacity:0.9
 feature_color=rgb(50,205,50)
@@ -81,7 +84,7 @@ cross_link_color = #FF8C00
 cross_link_opacity = 1
 cross_link_anchor_pos = low_up # up,medium,low
 ignore_sharp_arrow=no # yes or no
-cross_link_position_ellipse=up
+cross_link_orientation_ellipse=up
 cross_link_shape=rect # ellipse or v or rect
 cross_link_height_ellipse=10,8 # 10 and 8 is the radius of outter ellipse and inner ellipse
 
