--- a/example/main.9.conf
+++ b/example/main.9.conf
@@ -22,7 +22,7 @@ feature_shift_y=0 # unit is feature_shift_y_unit
 feature_shift_y_unit=backbone # backbone or radius, backbone is genome_height_ratio
 feature_shift_x=0 # unit is bp
 feature_height_ratio=10 # defined feature height
-track_style= fill:blue # fill:blue;stroke:pink;stroke-width:5;fill-opacity:0.1;stroke-opacity:0.9
+track_style= fill:blue;opacity:0.2 # fill:blue;stroke:pink;stroke-width:5;fill-opacity:0.1;stroke-opacity:0.9
 feature_color=rgb(50,205,50)
 feature_border_size=0
 feature_border_color=black 
@@ -49,6 +49,10 @@ connect_stroke_dasharray=2,5
 connect_stroke_width=2
 connect_stroke_color=black
 absolute_postion_in_title=yes
+## feature yticks
+#feature_ytick_region=All:0-3:0-10:(the depth1);3.1-5.1:1-5:(the depth2) # mean two ytick axis: ytick = 0-10 and 1-5. 0-3 and 4-6 is the feature_shift_y, should adjust by real situanition
+feature_ytick_region=s2:s2000:0:60:0:10:r:(the detph1);70:100:1:5:l:(the depth2) s4:s40000:0:80:90:100:r:(the depth3) # ^sample:scaffold_id: # mean two ytick axis: ytick = 0-10 and 1-5. 0-3 and 4-6 is the feature_shift_y, should adjust by real situanition
+# 0.5 / 0.05*genome_height_ratio = 0.5 * ytick region
 ## global setting end, specific setting in feature_setting
 
 
@@ -85,7 +89,7 @@ cross_link_opacity = 1
 cross_link_anchor_pos = low_up # up,medium,low
 ignore_sharp_arrow=no # yes or no
 cross_link_orientation_ellipse=up
-cross_link_shape=rect # ellipse or v or rect
+cross_link_shape=quadrilateral # ellipse or w or quadrilateral or line
 cross_link_height_ellipse=10,8 # 10 and 8 is the radius of outter ellipse and inner ellipse
 
 
