--- a/example/main.10.conf
+++ b/example/main.10.conf
@@ -26,7 +26,7 @@ track_style= fill:blue;opacity:0.2 # fill:blue;stroke:pink;stroke-width:5;fill-o
 feature_color=rgb(50,205,50)
 feature_border_size=0
 feature_border_color=black 
-genome_height_ratio=0.1 # mean genome height extend ratio
+genome_height_ratio=0.2 # mean genome height extend ratio
 feature_arrow_sharp_extent=5 # bigger mean sharper arrow
 # order for display
 track_order=1
@@ -37,12 +37,13 @@ display_feature=yes # no or yes
 # whether dispaly feature label
 display_feature_label=no # yes or no or yes,no or no,yes
 # feature_label 9 kinds of positon
-pos_feature_label=medium_up # or medium_low or left_low or right_low or medium_medium or left_medium
+pos_feature_label=right_low # or medium_low or left_low or right_low or medium_medium or left_medium
 # padding between feature and label
 # padding between feature and label
-padding_feature_label = 2 # space between feature and label
+padding_feature_label = 0.01 # space between feature and label
 # freature label rotate angle
-label_rotate_angle=-50
+label_rotate_angle=0
+feature_label_auto_angle_flag=1 # if auto shift angle
 # display or conceal the connect line between same scaffold
 connect_with_same_scaffold=no
 connect_stroke_dasharray=2,5
@@ -51,7 +52,8 @@ connect_stroke_color=black
 absolute_postion_in_title=yes
 ## feature yticks
 #feature_ytick_region=All:0-3:0-10:(the depth1);3.1-5.1:1-5:(the depth2) # mean two ytick axis: ytick = 0-10 and 1-5. 0-3 and 4-6 is the feature_shift_y, should adjust by real situanition
-feature_ytick_region=s2:s2000:10:40:0:10:r:(the detph1);50:80:1:5:l:(the depth2) s4:s40000:30:60:90:100:r:(the depth3) # ^sample:scaffold_id: # mean two ytick axis: ytick = 0-10 and 1-5. 0-3 and 4-6 is the feature_shift_y, should adjust by real situanition
+feature_ytick_region=s2:s2000:10:40:0:10:r:(the detph1);50:80:1:5:l:(the depth2) s4:s40000:10:80:90:100:r:(the depth3) # ^sample:scaffold_id: # mean two ytick axis: ytick = 0-10 and 1-5. 0-3 and 4-6 is the feature_shift_y, should adjust by real situanition
+feature_ytick_hgrid_line = 0 # 0 or fill:black,stroke,opacity
 # 0.5 / 0.05*genome_height_ratio = 0.5 * ytick region
 ## global setting end, specific setting in feature_setting
 
