--- a/example/s4.s40000.setting.conf
+++ b/example/s4.s40000.setting.conf
@@ -1,71 +1,223 @@
 
-s40000.6.8000.9609.1	feature_height_ratio	30
-s40000.6.8000.9609.1	feature_shape	rect
-s40000.6.8000.9609.1	feature_shift_x	20
-s40000.6.8000.9609.1	feature_shift_y	-45.5
-s40000.6.8000.9609.1	display_feature_label	yes
-s40000.6.8000.9609.1	feature_label	33333333333333333
-
-s40000.6.8000.9609.1.tick0	feature_height_ratio	1
-s40000.6.8000.9609.1.tick0	feature_shape	rect
-s40000.6.8000.9609.1.tick0	feature_shift_x	89.992
-s40000.6.8000.9609.1.tick0	feature_shift_y	-31
-s40000.6.8000.9609.1.tick0	display_feature_label	no
-s40000.6.8000.9609.1.tick0	feature_label	33333333333333333
-
-s40000.6.8000.9609.1.tick1	feature_height_ratio	1
-s40000.6.8000.9609.1.tick1	feature_shape	rect
-s40000.6.8000.9609.1.tick1	feature_shift_x	89.992
-s40000.6.8000.9609.1.tick1	feature_shift_y	-41
-s40000.6.8000.9609.1.tick1	display_feature_label	no
-s40000.6.8000.9609.1.tick1	feature_label	33333333333333333
-
-s40000.6.8000.9609.1.tick2	feature_height_ratio	1
-s40000.6.8000.9609.1.tick2	feature_shape	rect
-s40000.6.8000.9609.1.tick2	feature_shift_x	89.992
-s40000.6.8000.9609.1.tick2	feature_shift_y	-51
-s40000.6.8000.9609.1.tick2	display_feature_label	no
-s40000.6.8000.9609.1.tick2	feature_label	33333333333333333
-
-s40000.6.8000.9609.1.tick3	feature_height_ratio	1
-s40000.6.8000.9609.1.tick3	feature_shape	rect
-s40000.6.8000.9609.1.tick3	feature_shift_x	89.992
-s40000.6.8000.9609.1.tick3	feature_shift_y	-61
-s40000.6.8000.9609.1.tick3	display_feature_label	no
-s40000.6.8000.9609.1.tick3	feature_label	33333333333333333
-
-s40000.3.1000.8000.1	feature_height_ratio	30
+s40000.3.1000.8000.1	feature_height_ratio	35
 s40000.3.1000.8000.1	feature_shape	rect
 s40000.3.1000.8000.1	feature_shift_x	20
-s40000.3.1000.8000.1	feature_shift_y	-45.5
-s40000.3.1000.8000.1	display_feature_label	yes
+s40000.3.1000.8000.1	feature_shift_y	-23
+s40000.3.1000.8000.1	display_feature_label	no
 s40000.3.1000.8000.1	feature_label	33333333333333333
 
-s40000.3.1000.8000.1.tick0	feature_height_ratio	1
+s40000.3.1000.8000.1.tick0	feature_height_ratio	0.4
 s40000.3.1000.8000.1.tick0	feature_shape	rect
-s40000.3.1000.8000.1.tick0	feature_shift_x	89.992
-s40000.3.1000.8000.1.tick0	feature_shift_y	-31
-s40000.3.1000.8000.1.tick0	display_feature_label	no
-s40000.3.1000.8000.1.tick0	feature_label	33333333333333333
+s40000.3.1000.8000.1.tick0	feature_shift_x	80
+s40000.3.1000.8000.1.tick0	feature_shift_y	-5.7
+s40000.3.1000.8000.1.tick0	display_feature_label	yes
+s40000.3.1000.8000.1.tick0	feature_label	10
+s40000.3.1000.8000.1.tick0	pos_feature_label	right_medium
+s40000.3.1000.8000.1.tick0	label_rotate_angle	0
+s40000.3.1000.8000.1.tick0	feature_label_size	6
+s40000.3.1000.8000.1.tick0	padding_feature_label	1.8
+s40000.3.1000.8000.1.tick0	feature_label_auto_angle_flag	0
 
-s40000.3.1000.8000.1.tick1	feature_height_ratio	1
+
+s40000.3.1000.8000.1.tick1	feature_height_ratio	0.4
 s40000.3.1000.8000.1.tick1	feature_shape	rect
-s40000.3.1000.8000.1.tick1	feature_shift_x	89.992
-s40000.3.1000.8000.1.tick1	feature_shift_y	-41
-s40000.3.1000.8000.1.tick1	display_feature_label	no
-s40000.3.1000.8000.1.tick1	feature_label	33333333333333333
+s40000.3.1000.8000.1.tick1	feature_shift_x	80
+s40000.3.1000.8000.1.tick1	feature_shift_y	-10.7
+s40000.3.1000.8000.1.tick1	display_feature_label	yes
+s40000.3.1000.8000.1.tick1	feature_label	20
+s40000.3.1000.8000.1.tick1	pos_feature_label	right_medium
+s40000.3.1000.8000.1.tick1	label_rotate_angle	0
+s40000.3.1000.8000.1.tick1	feature_label_size	6
+s40000.3.1000.8000.1.tick1	padding_feature_label	1.8
+s40000.3.1000.8000.1.tick1	feature_label_auto_angle_flag	0
 
-s40000.3.1000.8000.1.tick2	feature_height_ratio	1
+
+s40000.3.1000.8000.1.tick2	feature_height_ratio	0.4
 s40000.3.1000.8000.1.tick2	feature_shape	rect
-s40000.3.1000.8000.1.tick2	feature_shift_x	89.992
-s40000.3.1000.8000.1.tick2	feature_shift_y	-51
-s40000.3.1000.8000.1.tick2	display_feature_label	no
-s40000.3.1000.8000.1.tick2	feature_label	33333333333333333
+s40000.3.1000.8000.1.tick2	feature_shift_x	80
+s40000.3.1000.8000.1.tick2	feature_shift_y	-15.7
+s40000.3.1000.8000.1.tick2	display_feature_label	yes
+s40000.3.1000.8000.1.tick2	feature_label	30
+s40000.3.1000.8000.1.tick2	pos_feature_label	right_medium
+s40000.3.1000.8000.1.tick2	label_rotate_angle	0
+s40000.3.1000.8000.1.tick2	feature_label_size	6
+s40000.3.1000.8000.1.tick2	padding_feature_label	1.8
+s40000.3.1000.8000.1.tick2	feature_label_auto_angle_flag	0
 
-s40000.3.1000.8000.1.tick3	feature_height_ratio	1
+
+s40000.3.1000.8000.1.tick3	feature_height_ratio	0.4
 s40000.3.1000.8000.1.tick3	feature_shape	rect
-s40000.3.1000.8000.1.tick3	feature_shift_x	89.992
-s40000.3.1000.8000.1.tick3	feature_shift_y	-61
-s40000.3.1000.8000.1.tick3	display_feature_label	no
-s40000.3.1000.8000.1.tick3	feature_label	33333333333333333
+s40000.3.1000.8000.1.tick3	feature_shift_x	80
+s40000.3.1000.8000.1.tick3	feature_shift_y	-20.7
+s40000.3.1000.8000.1.tick3	display_feature_label	yes
+s40000.3.1000.8000.1.tick3	feature_label	40
+s40000.3.1000.8000.1.tick3	pos_feature_label	right_medium
+s40000.3.1000.8000.1.tick3	label_rotate_angle	0
+s40000.3.1000.8000.1.tick3	feature_label_size	6
+s40000.3.1000.8000.1.tick3	padding_feature_label	1.8
+s40000.3.1000.8000.1.tick3	feature_label_auto_angle_flag	0
+
+
+s40000.3.1000.8000.1.tick4	feature_height_ratio	0.4
+s40000.3.1000.8000.1.tick4	feature_shape	rect
+s40000.3.1000.8000.1.tick4	feature_shift_x	80
+s40000.3.1000.8000.1.tick4	feature_shift_y	-25.7
+s40000.3.1000.8000.1.tick4	display_feature_label	yes
+s40000.3.1000.8000.1.tick4	feature_label	50
+s40000.3.1000.8000.1.tick4	pos_feature_label	right_medium
+s40000.3.1000.8000.1.tick4	label_rotate_angle	0
+s40000.3.1000.8000.1.tick4	feature_label_size	6
+s40000.3.1000.8000.1.tick4	padding_feature_label	1.8
+s40000.3.1000.8000.1.tick4	feature_label_auto_angle_flag	0
+
+
+s40000.3.1000.8000.1.tick5	feature_height_ratio	0.4
+s40000.3.1000.8000.1.tick5	feature_shape	rect
+s40000.3.1000.8000.1.tick5	feature_shift_x	80
+s40000.3.1000.8000.1.tick5	feature_shift_y	-30.7
+s40000.3.1000.8000.1.tick5	display_feature_label	yes
+s40000.3.1000.8000.1.tick5	feature_label	60
+s40000.3.1000.8000.1.tick5	pos_feature_label	right_medium
+s40000.3.1000.8000.1.tick5	label_rotate_angle	0
+s40000.3.1000.8000.1.tick5	feature_label_size	6
+s40000.3.1000.8000.1.tick5	padding_feature_label	1.8
+s40000.3.1000.8000.1.tick5	feature_label_auto_angle_flag	0
+
+
+s40000.3.1000.8000.1.tick6	feature_height_ratio	0.4
+s40000.3.1000.8000.1.tick6	feature_shape	rect
+s40000.3.1000.8000.1.tick6	feature_shift_x	80
+s40000.3.1000.8000.1.tick6	feature_shift_y	-35.7
+s40000.3.1000.8000.1.tick6	display_feature_label	yes
+s40000.3.1000.8000.1.tick6	feature_label	70
+s40000.3.1000.8000.1.tick6	pos_feature_label	right_medium
+s40000.3.1000.8000.1.tick6	label_rotate_angle	0
+s40000.3.1000.8000.1.tick6	feature_label_size	6
+s40000.3.1000.8000.1.tick6	padding_feature_label	1.8
+s40000.3.1000.8000.1.tick6	feature_label_auto_angle_flag	0
+
+
+s40000.3.1000.8000.1.tick7	feature_height_ratio	0.4
+s40000.3.1000.8000.1.tick7	feature_shape	rect
+s40000.3.1000.8000.1.tick7	feature_shift_x	80
+s40000.3.1000.8000.1.tick7	feature_shift_y	-40.7
+s40000.3.1000.8000.1.tick7	display_feature_label	yes
+s40000.3.1000.8000.1.tick7	feature_label	80
+s40000.3.1000.8000.1.tick7	pos_feature_label	right_medium
+s40000.3.1000.8000.1.tick7	label_rotate_angle	0
+s40000.3.1000.8000.1.tick7	feature_label_size	6
+s40000.3.1000.8000.1.tick7	padding_feature_label	1.8
+s40000.3.1000.8000.1.tick7	feature_label_auto_angle_flag	0
+
+
+s40000.6.8000.9609.1	feature_height_ratio	35
+s40000.6.8000.9609.1	feature_shape	rect
+s40000.6.8000.9609.1	feature_shift_x	20
+s40000.6.8000.9609.1	feature_shift_y	-23
+s40000.6.8000.9609.1	display_feature_label	no
+s40000.6.8000.9609.1	feature_label	33333333333333333
+
+s40000.6.8000.9609.1.tick0	feature_height_ratio	0.4
+s40000.6.8000.9609.1.tick0	feature_shape	rect
+s40000.6.8000.9609.1.tick0	feature_shift_x	80
+s40000.6.8000.9609.1.tick0	feature_shift_y	-5.7
+s40000.6.8000.9609.1.tick0	display_feature_label	yes
+s40000.6.8000.9609.1.tick0	feature_label	10
+s40000.6.8000.9609.1.tick0	pos_feature_label	right_medium
+s40000.6.8000.9609.1.tick0	label_rotate_angle	0
+s40000.6.8000.9609.1.tick0	feature_label_size	6
+s40000.6.8000.9609.1.tick0	padding_feature_label	1.8
+s40000.6.8000.9609.1.tick0	feature_label_auto_angle_flag	0
+
+
+s40000.6.8000.9609.1.tick1	feature_height_ratio	0.4
+s40000.6.8000.9609.1.tick1	feature_shape	rect
+s40000.6.8000.9609.1.tick1	feature_shift_x	80
+s40000.6.8000.9609.1.tick1	feature_shift_y	-10.7
+s40000.6.8000.9609.1.tick1	display_feature_label	yes
+s40000.6.8000.9609.1.tick1	feature_label	20
+s40000.6.8000.9609.1.tick1	pos_feature_label	right_medium
+s40000.6.8000.9609.1.tick1	label_rotate_angle	0
+s40000.6.8000.9609.1.tick1	feature_label_size	6
+s40000.6.8000.9609.1.tick1	padding_feature_label	1.8
+s40000.6.8000.9609.1.tick1	feature_label_auto_angle_flag	0
+
+
+s40000.6.8000.9609.1.tick2	feature_height_ratio	0.4
+s40000.6.8000.9609.1.tick2	feature_shape	rect
+s40000.6.8000.9609.1.tick2	feature_shift_x	80
+s40000.6.8000.9609.1.tick2	feature_shift_y	-15.7
+s40000.6.8000.9609.1.tick2	display_feature_label	yes
+s40000.6.8000.9609.1.tick2	feature_label	30
+s40000.6.8000.9609.1.tick2	pos_feature_label	right_medium
+s40000.6.8000.9609.1.tick2	label_rotate_angle	0
+s40000.6.8000.9609.1.tick2	feature_label_size	6
+s40000.6.8000.9609.1.tick2	padding_feature_label	1.8
+s40000.6.8000.9609.1.tick2	feature_label_auto_angle_flag	0
+
+
+s40000.6.8000.9609.1.tick3	feature_height_ratio	0.4
+s40000.6.8000.9609.1.tick3	feature_shape	rect
+s40000.6.8000.9609.1.tick3	feature_shift_x	80
+s40000.6.8000.9609.1.tick3	feature_shift_y	-20.7
+s40000.6.8000.9609.1.tick3	display_feature_label	yes
+s40000.6.8000.9609.1.tick3	feature_label	40
+s40000.6.8000.9609.1.tick3	pos_feature_label	right_medium
+s40000.6.8000.9609.1.tick3	label_rotate_angle	0
+s40000.6.8000.9609.1.tick3	feature_label_size	6
+s40000.6.8000.9609.1.tick3	padding_feature_label	1.8
+s40000.6.8000.9609.1.tick3	feature_label_auto_angle_flag	0
+
+
+s40000.6.8000.9609.1.tick4	feature_height_ratio	0.4
+s40000.6.8000.9609.1.tick4	feature_shape	rect
+s40000.6.8000.9609.1.tick4	feature_shift_x	80
+s40000.6.8000.9609.1.tick4	feature_shift_y	-25.7
+s40000.6.8000.9609.1.tick4	display_feature_label	yes
+s40000.6.8000.9609.1.tick4	feature_label	50
+s40000.6.8000.9609.1.tick4	pos_feature_label	right_medium
+s40000.6.8000.9609.1.tick4	label_rotate_angle	0
+s40000.6.8000.9609.1.tick4	feature_label_size	6
+s40000.6.8000.9609.1.tick4	padding_feature_label	1.8
+s40000.6.8000.9609.1.tick4	feature_label_auto_angle_flag	0
+
+
+s40000.6.8000.9609.1.tick5	feature_height_ratio	0.4
+s40000.6.8000.9609.1.tick5	feature_shape	rect
+s40000.6.8000.9609.1.tick5	feature_shift_x	80
+s40000.6.8000.9609.1.tick5	feature_shift_y	-30.7
+s40000.6.8000.9609.1.tick5	display_feature_label	yes
+s40000.6.8000.9609.1.tick5	feature_label	60
+s40000.6.8000.9609.1.tick5	pos_feature_label	right_medium
+s40000.6.8000.9609.1.tick5	label_rotate_angle	0
+s40000.6.8000.9609.1.tick5	feature_label_size	6
+s40000.6.8000.9609.1.tick5	padding_feature_label	1.8
+s40000.6.8000.9609.1.tick5	feature_label_auto_angle_flag	0
+
+
+s40000.6.8000.9609.1.tick6	feature_height_ratio	0.4
+s40000.6.8000.9609.1.tick6	feature_shape	rect
+s40000.6.8000.9609.1.tick6	feature_shift_x	80
+s40000.6.8000.9609.1.tick6	feature_shift_y	-35.7
+s40000.6.8000.9609.1.tick6	display_feature_label	yes
+s40000.6.8000.9609.1.tick6	feature_label	70
+s40000.6.8000.9609.1.tick6	pos_feature_label	right_medium
+s40000.6.8000.9609.1.tick6	label_rotate_angle	0
+s40000.6.8000.9609.1.tick6	feature_label_size	6
+s40000.6.8000.9609.1.tick6	padding_feature_label	1.8
+s40000.6.8000.9609.1.tick6	feature_label_auto_angle_flag	0
+
+
+s40000.6.8000.9609.1.tick7	feature_height_ratio	0.4
+s40000.6.8000.9609.1.tick7	feature_shape	rect
+s40000.6.8000.9609.1.tick7	feature_shift_x	80
+s40000.6.8000.9609.1.tick7	feature_shift_y	-40.7
+s40000.6.8000.9609.1.tick7	display_feature_label	yes
+s40000.6.8000.9609.1.tick7	feature_label	80
+s40000.6.8000.9609.1.tick7	pos_feature_label	right_medium
+s40000.6.8000.9609.1.tick7	label_rotate_angle	0
+s40000.6.8000.9609.1.tick7	feature_label_size	6
+s40000.6.8000.9609.1.tick7	padding_feature_label	1.8
+s40000.6.8000.9609.1.tick7	feature_label_auto_angle_flag	0
+
 
