--- a/example/main.10.conf
+++ b/example/main.10.conf
@@ -5,7 +5,7 @@ svg_background_color = white #background color of whole figure
 
 # plot feature type
 feature_keywords = gene,circle,ytick,xxxxx # *, gene,point,hist,heatmap
-feature_setting = feature.color.label.conf10 # *
+feature_setting = feature.color.label.conf10.new # *
 
 # figure width layout
 width_ratio_ref_cluster_legend = 0.1-0.75-0.15 # 0.1+0.75+0.15=1
@@ -19,7 +19,7 @@ feature_arrow_width_extent=0.3
 feature_label_size=10
 feature_label_color=black
 feature_shift_y=0 # unit is feature_shift_y_unit 
-feature_shift_y_unit=backbone # backbone or radius, backbone is genome_height_ratio
+feature_shift_y_unit=backbone # backbone or radius or percent, backbone is genome_height_ratio
 feature_shift_x=0 # unit is bp
 feature_height_ratio=10 # defined feature height
 track_style= fill:blue;opacity:0.2 # fill:blue;stroke:pink;stroke-width:5;fill-opacity:0.1;stroke-opacity:0.9
@@ -52,8 +52,9 @@ connect_stroke_color=black
 absolute_postion_in_title=yes
 ## feature yticks
 #feature_ytick_region=All:0-3:0-10:(the depth1);3.1-5.1:1-5:(the depth2) # mean two ytick axis: ytick = 0-10 and 1-5. 0-3 and 4-6 is the feature_shift_y, should adjust by real situanition
-feature_ytick_region=s2:s2000:10:40:0:10:r:(the detph1);50:80:1:5:l:(the depth2) s4:s40000:10:80:90:100:r:(the depth3) # ^sample:scaffold_id: # mean two ytick axis: ytick = 0-10 and 1-5. 0-3 and 4-6 is the feature_shift_y, should adjust by real situanition
+feature_ytick_region=s2:s2000:10:40:0:10:r:(the detph1);50:80:1:5:l:(the depth2) s4:s40000:20:80:90:100:r:(the depth3) # ^sample:scaffold_id: # mean two ytick axis: ytick = 0-10 and 1-5. 0-3 and 4-6 is the feature_shift_y, should adjust by real situanition
 feature_ytick_hgrid_line = 0 # 0 or fill:black,stroke,opacity
+
 # 0.5 / 0.05*genome_height_ratio = 0.5 * ytick region
 ## global setting end, specific setting in feature_setting
 
@@ -105,9 +106,28 @@ scale_position=low # up or low or up_low
 scale_color=green
 scale_width=0.5
 scale_ratio=2000 # bp
-scale_padding_y=-0.2
+scale_padding_y=0.6
 scale_tick_opacity=1
 scale_tick_height=0.01
 scale_order=-1
-scale_tick_padding_y=15
+scale_tick_padding_y=10
 scale_tick_fontsize=13
+
+
+# 3rd column: 0 mean all fragment, otherwise 1 mean 1st fragment in the track
+# forth column mean depth window size bp
+# bam or dep.txt
+# 10 -> 50 or -10 -> -50
+# 20->30 is for show
+depth_hist = s2,s2000,0,100,path_map.sort.bam,0->50,ytick_flag,20->30,ytick_label_text,hgrid_flag
+depth_hist = s2,s2000,0,100,path_map.sort.bam,60->90,ytick_flag,20->30,ytick_label_text,hgrid_flag
+depth_hist = s3,s3,0,100,path_map.sort.bam,10->40,ytick_flag,20->30,ytick_label_text,hgrid_flag
+depth_hist = s3,s3,0,100,path_map.sort.bam,50->80,ytick_flag,20->30,ytick_label_text,hgrid_flag
+depth_scatter= ee
+depth_scatter_line=ee
+
+sr_mapping=s2,s2000,0,path_sr_map.sort.bam,rainbow_or_hline,10->50
+lr_mapping=s2,s2000,0,path_sr_map.sort.bam,rainbow_or_hline,10->50
+
+
+
