--- a/example/main.10.conf
+++ b/example/main.10.conf
@@ -4,7 +4,7 @@ pdf_dpi = 100
 svg_background_color = white #background color of whole figure
 
 # plot feature type
-feature_keywords = gene,circle,ytick,xxxxx # *, gene,point,hist,heatmap
+feature_keywords = gene,circle,ytick,depth_hist,xxxxx # *, gene,point,hist,heatmap
 feature_setting = feature.color.label.conf10.new # *
 
 # figure width layout
@@ -66,7 +66,7 @@ shift_angle_closed_feature = 10
 
 # layout
 top_bottom_margin = 0.2 # 高度上 top和bottom占的比例,top和bottom可能有scale
-space_between_blocks = 100 # bp, mean space of every block in one track
+space_between_blocks = 500 # bp, mean space of every block in one track
 default_legend = other
 
 # new sample name
@@ -119,11 +119,11 @@ scale_tick_fontsize=13
 # bam or dep.txt
 # 10 -> 50 or -10 -> -50
 # 20->30 is for show
-depth_hist = s2,s2000,0,100,path_map.sort.bam,0->50,ytick_flag,20->30,ytick_label_text,hgrid_flag
-depth_hist = s2,s2000,0,100,path_map.sort.bam,60->90,ytick_flag,20->30,ytick_label_text,hgrid_flag
-depth_hist = s3,s3,1,100,path_map.sort.bam,10->40,ytick_flag,20->30,ytick_label_text,hgrid_flag
-depth_hist = s3,s3,2,100,path_map.sort.bam,10->60,ytick_flag,20->30,ytick_label_text,hgrid_flag
-depth_hist = s3,s3,3,100,path_map.sort.bam,40->80,ytick_flag,20->30,ytick_label_text,hgrid_flag
+#depth_hist = s2,s2000,0,100,path_map.sort.bam,0->50,ytick_flag,20->30,ytick_label_text,hgrid_flag,black:black,1:0.3,1:0.5
+#depth_hist = s2,s2000,0,100,path_map.sort.bam,60->90,ytick_flag,20->30,ytick_label_text,hgrid_flag,green:green,1:0.3,1:0.5
+depth_hist = s3,s3,1,100,s3.s3.depth.txt,10->60,ytick_flag,20->30,ytick_label_text,hgrid_flag,green:black,1:0.5,1:0.5,6:6
+depth_hist = s3,s3,2,100,s3.s3.depth.txt,15->70,ytick_flag,20->30,ytick_label_text,hgrid_flag,green:green,0.6:0.3,1:1,6:6
+depth_hist = s3,s3,3,100,s3.s3.depth.txt,30->80,ytick_flag,20->30,ytick_label_text,hgrid_flag,black:green,1:0.3,1:1,7:7
 depth_scatter= ee
 depth_scatter_line=ee
 
