--- a/example/s2.setting.conf
+++ b/example/s2.setting.conf
@@ -9,8 +9,22 @@ s2.s2000.2.2000.6000.1	feature_shift_y_unit	percent
 s2.s2000.2.2000.6000.1	display_feature_label	no
 s2.s2000.2.2000.6000.1	pos_feature_label	right_medium
 s2.s2000.2.2000.6000.1	feature_label	ytick_label
+s2.s2000.2.2000.6000.1	feature_color	black
+s2.s2000.2.2000.6000.1	feature_opacity	1
 
-s2.s2000.2.2000.6000.1.tick0	feature_height_ratio	0.4
+s2.s2000.2.2000.6000.1.tick0.hgrid	feature_height_ratio	0.5
+
+s2.s2000.2.2000.6000.1.tick0.hgrid	feature_height_unit	percent
+s2.s2000.2.2000.6000.1.tick0.hgrid	feature_shape	rect
+s2.s2000.2.2000.6000.1.tick0.hgrid	display_feature_label	no
+s2.s2000.2.2000.6000.1.tick0.hgrid	feature_opacity	0.3
+s2.s2000.2.2000.6000.1.tick0.hgrid	feature_shift_y	-0
+s2.s2000.2.2000.6000.1.tick0.hgrid	feature_shift_y_unit	percent
+s2.s2000.2.2000.6000.1.tick0.hgrid	feature_color	black
+
+s2.s2000.2.2000.6000.1.tick0	feature_height_ratio	1
+
+s2.s2000.2.2000.6000.1.tick0	feature_height_unit	percent
 s2.s2000.2.2000.6000.1.tick0	feature_shape	rect
 s2.s2000.2.2000.6000.1.tick0	feature_shift_x	80
 s2.s2000.2.2000.6000.1.tick0	feature_shift_y	-0
@@ -23,8 +37,24 @@ s2.s2000.2.2000.6000.1.tick0	feature_label_size	6
 s2.s2000.2.2000.6000.1.tick0	padding_feature_label	1.8
 s2.s2000.2.2000.6000.1.tick0	feature_label_auto_angle_flag	0
 
+s2.s2000.2.2000.6000.1.tick0	feature_color	black
 
-s2.s2000.2.2000.6000.1.tick1	feature_height_ratio	0.4
+s2.s2000.2.2000.6000.1.tick0	feature_opacity	1
+
+
+s2.s2000.2.2000.6000.1.tick1.hgrid	feature_height_ratio	0.5
+
+s2.s2000.2.2000.6000.1.tick1.hgrid	feature_height_unit	percent
+s2.s2000.2.2000.6000.1.tick1.hgrid	feature_shape	rect
+s2.s2000.2.2000.6000.1.tick1.hgrid	display_feature_label	no
+s2.s2000.2.2000.6000.1.tick1.hgrid	feature_opacity	0.3
+s2.s2000.2.2000.6000.1.tick1.hgrid	feature_shift_y	-10
+s2.s2000.2.2000.6000.1.tick1.hgrid	feature_shift_y_unit	percent
+s2.s2000.2.2000.6000.1.tick1.hgrid	feature_color	black
+
+s2.s2000.2.2000.6000.1.tick1	feature_height_ratio	1
+
+s2.s2000.2.2000.6000.1.tick1	feature_height_unit	percent
 s2.s2000.2.2000.6000.1.tick1	feature_shape	rect
 s2.s2000.2.2000.6000.1.tick1	feature_shift_x	80
 s2.s2000.2.2000.6000.1.tick1	feature_shift_y	-10
@@ -37,8 +67,24 @@ s2.s2000.2.2000.6000.1.tick1	feature_label_size	6
 s2.s2000.2.2000.6000.1.tick1	padding_feature_label	1.8
 s2.s2000.2.2000.6000.1.tick1	feature_label_auto_angle_flag	0
 
+s2.s2000.2.2000.6000.1.tick1	feature_color	black
 
-s2.s2000.2.2000.6000.1.tick2	feature_height_ratio	0.4
+s2.s2000.2.2000.6000.1.tick1	feature_opacity	1
+
+
+s2.s2000.2.2000.6000.1.tick2.hgrid	feature_height_ratio	0.5
+
+s2.s2000.2.2000.6000.1.tick2.hgrid	feature_height_unit	percent
+s2.s2000.2.2000.6000.1.tick2.hgrid	feature_shape	rect
+s2.s2000.2.2000.6000.1.tick2.hgrid	display_feature_label	no
+s2.s2000.2.2000.6000.1.tick2.hgrid	feature_opacity	0.3
+s2.s2000.2.2000.6000.1.tick2.hgrid	feature_shift_y	-20
+s2.s2000.2.2000.6000.1.tick2.hgrid	feature_shift_y_unit	percent
+s2.s2000.2.2000.6000.1.tick2.hgrid	feature_color	black
+
+s2.s2000.2.2000.6000.1.tick2	feature_height_ratio	1
+
+s2.s2000.2.2000.6000.1.tick2	feature_height_unit	percent
 s2.s2000.2.2000.6000.1.tick2	feature_shape	rect
 s2.s2000.2.2000.6000.1.tick2	feature_shift_x	80
 s2.s2000.2.2000.6000.1.tick2	feature_shift_y	-20
@@ -51,8 +97,24 @@ s2.s2000.2.2000.6000.1.tick2	feature_label_size	6
 s2.s2000.2.2000.6000.1.tick2	padding_feature_label	1.8
 s2.s2000.2.2000.6000.1.tick2	feature_label_auto_angle_flag	0
 
+s2.s2000.2.2000.6000.1.tick2	feature_color	black
 
-s2.s2000.2.2000.6000.1.tick3	feature_height_ratio	0.4
+s2.s2000.2.2000.6000.1.tick2	feature_opacity	1
+
+
+s2.s2000.2.2000.6000.1.tick3.hgrid	feature_height_ratio	0.5
+
+s2.s2000.2.2000.6000.1.tick3.hgrid	feature_height_unit	percent
+s2.s2000.2.2000.6000.1.tick3.hgrid	feature_shape	rect
+s2.s2000.2.2000.6000.1.tick3.hgrid	display_feature_label	no
+s2.s2000.2.2000.6000.1.tick3.hgrid	feature_opacity	0.3
+s2.s2000.2.2000.6000.1.tick3.hgrid	feature_shift_y	-30
+s2.s2000.2.2000.6000.1.tick3.hgrid	feature_shift_y_unit	percent
+s2.s2000.2.2000.6000.1.tick3.hgrid	feature_color	black
+
+s2.s2000.2.2000.6000.1.tick3	feature_height_ratio	1
+
+s2.s2000.2.2000.6000.1.tick3	feature_height_unit	percent
 s2.s2000.2.2000.6000.1.tick3	feature_shape	rect
 s2.s2000.2.2000.6000.1.tick3	feature_shift_x	80
 s2.s2000.2.2000.6000.1.tick3	feature_shift_y	-30
@@ -65,8 +127,24 @@ s2.s2000.2.2000.6000.1.tick3	feature_label_size	6
 s2.s2000.2.2000.6000.1.tick3	padding_feature_label	1.8
 s2.s2000.2.2000.6000.1.tick3	feature_label_auto_angle_flag	0
 
+s2.s2000.2.2000.6000.1.tick3	feature_color	black
 
-s2.s2000.2.2000.6000.1.tick4	feature_height_ratio	0.4
+s2.s2000.2.2000.6000.1.tick3	feature_opacity	1
+
+
+s2.s2000.2.2000.6000.1.tick4.hgrid	feature_height_ratio	0.5
+
+s2.s2000.2.2000.6000.1.tick4.hgrid	feature_height_unit	percent
+s2.s2000.2.2000.6000.1.tick4.hgrid	feature_shape	rect
+s2.s2000.2.2000.6000.1.tick4.hgrid	display_feature_label	no
+s2.s2000.2.2000.6000.1.tick4.hgrid	feature_opacity	0.3
+s2.s2000.2.2000.6000.1.tick4.hgrid	feature_shift_y	-40
+s2.s2000.2.2000.6000.1.tick4.hgrid	feature_shift_y_unit	percent
+s2.s2000.2.2000.6000.1.tick4.hgrid	feature_color	black
+
+s2.s2000.2.2000.6000.1.tick4	feature_height_ratio	1
+
+s2.s2000.2.2000.6000.1.tick4	feature_height_unit	percent
 s2.s2000.2.2000.6000.1.tick4	feature_shape	rect
 s2.s2000.2.2000.6000.1.tick4	feature_shift_x	80
 s2.s2000.2.2000.6000.1.tick4	feature_shift_y	-40
@@ -79,8 +157,24 @@ s2.s2000.2.2000.6000.1.tick4	feature_label_size	6
 s2.s2000.2.2000.6000.1.tick4	padding_feature_label	1.8
 s2.s2000.2.2000.6000.1.tick4	feature_label_auto_angle_flag	0
 
+s2.s2000.2.2000.6000.1.tick4	feature_color	black
 
-s2.s2000.2.2000.6000.1.tick5	feature_height_ratio	0.4
+s2.s2000.2.2000.6000.1.tick4	feature_opacity	1
+
+
+s2.s2000.2.2000.6000.1.tick5.hgrid	feature_height_ratio	0.5
+
+s2.s2000.2.2000.6000.1.tick5.hgrid	feature_height_unit	percent
+s2.s2000.2.2000.6000.1.tick5.hgrid	feature_shape	rect
+s2.s2000.2.2000.6000.1.tick5.hgrid	display_feature_label	no
+s2.s2000.2.2000.6000.1.tick5.hgrid	feature_opacity	0.3
+s2.s2000.2.2000.6000.1.tick5.hgrid	feature_shift_y	-50
+s2.s2000.2.2000.6000.1.tick5.hgrid	feature_shift_y_unit	percent
+s2.s2000.2.2000.6000.1.tick5.hgrid	feature_color	black
+
+s2.s2000.2.2000.6000.1.tick5	feature_height_ratio	1
+
+s2.s2000.2.2000.6000.1.tick5	feature_height_unit	percent
 s2.s2000.2.2000.6000.1.tick5	feature_shape	rect
 s2.s2000.2.2000.6000.1.tick5	feature_shift_x	80
 s2.s2000.2.2000.6000.1.tick5	feature_shift_y	-50
@@ -93,6 +187,10 @@ s2.s2000.2.2000.6000.1.tick5	feature_label_size	6
 s2.s2000.2.2000.6000.1.tick5	padding_feature_label	1.8
 s2.s2000.2.2000.6000.1.tick5	feature_label_auto_angle_flag	0
 
+s2.s2000.2.2000.6000.1.tick5	feature_color	black
+
+s2.s2000.2.2000.6000.1.tick5	feature_opacity	1
+
 
 s2.s2000.2.2000.6000.2	feature_height_ratio	30
 
@@ -104,8 +202,22 @@ s2.s2000.2.2000.6000.2	feature_shift_y_unit	percent
 s2.s2000.2.2000.6000.2	display_feature_label	no
 s2.s2000.2.2000.6000.2	pos_feature_label	right_medium
 s2.s2000.2.2000.6000.2	feature_label	ytick_label
+s2.s2000.2.2000.6000.2	feature_color	green
+s2.s2000.2.2000.6000.2	feature_opacity	1
 
-s2.s2000.2.2000.6000.2.tick0	feature_height_ratio	0.4
+s2.s2000.2.2000.6000.2.tick0.hgrid	feature_height_ratio	0.5
+
+s2.s2000.2.2000.6000.2.tick0.hgrid	feature_height_unit	percent
+s2.s2000.2.2000.6000.2.tick0.hgrid	feature_shape	rect
+s2.s2000.2.2000.6000.2.tick0.hgrid	display_feature_label	no
+s2.s2000.2.2000.6000.2.tick0.hgrid	feature_opacity	0.3
+s2.s2000.2.2000.6000.2.tick0.hgrid	feature_shift_y	-60
+s2.s2000.2.2000.6000.2.tick0.hgrid	feature_shift_y_unit	percent
+s2.s2000.2.2000.6000.2.tick0.hgrid	feature_color	green
+
+s2.s2000.2.2000.6000.2.tick0	feature_height_ratio	1
+
+s2.s2000.2.2000.6000.2.tick0	feature_height_unit	percent
 s2.s2000.2.2000.6000.2.tick0	feature_shape	rect
 s2.s2000.2.2000.6000.2.tick0	feature_shift_x	80
 s2.s2000.2.2000.6000.2.tick0	feature_shift_y	-60
@@ -118,8 +230,24 @@ s2.s2000.2.2000.6000.2.tick0	feature_label_size	6
 s2.s2000.2.2000.6000.2.tick0	padding_feature_label	1.8
 s2.s2000.2.2000.6000.2.tick0	feature_label_auto_angle_flag	0
 
+s2.s2000.2.2000.6000.2.tick0	feature_color	green
 
-s2.s2000.2.2000.6000.2.tick1	feature_height_ratio	0.4
+s2.s2000.2.2000.6000.2.tick0	feature_opacity	1
+
+
+s2.s2000.2.2000.6000.2.tick1.hgrid	feature_height_ratio	0.5
+
+s2.s2000.2.2000.6000.2.tick1.hgrid	feature_height_unit	percent
+s2.s2000.2.2000.6000.2.tick1.hgrid	feature_shape	rect
+s2.s2000.2.2000.6000.2.tick1.hgrid	display_feature_label	no
+s2.s2000.2.2000.6000.2.tick1.hgrid	feature_opacity	0.3
+s2.s2000.2.2000.6000.2.tick1.hgrid	feature_shift_y	-70
+s2.s2000.2.2000.6000.2.tick1.hgrid	feature_shift_y_unit	percent
+s2.s2000.2.2000.6000.2.tick1.hgrid	feature_color	green
+
+s2.s2000.2.2000.6000.2.tick1	feature_height_ratio	1
+
+s2.s2000.2.2000.6000.2.tick1	feature_height_unit	percent
 s2.s2000.2.2000.6000.2.tick1	feature_shape	rect
 s2.s2000.2.2000.6000.2.tick1	feature_shift_x	80
 s2.s2000.2.2000.6000.2.tick1	feature_shift_y	-70
@@ -132,8 +260,24 @@ s2.s2000.2.2000.6000.2.tick1	feature_label_size	6
 s2.s2000.2.2000.6000.2.tick1	padding_feature_label	1.8
 s2.s2000.2.2000.6000.2.tick1	feature_label_auto_angle_flag	0
 
+s2.s2000.2.2000.6000.2.tick1	feature_color	green
 
-s2.s2000.2.2000.6000.2.tick2	feature_height_ratio	0.4
+s2.s2000.2.2000.6000.2.tick1	feature_opacity	1
+
+
+s2.s2000.2.2000.6000.2.tick2.hgrid	feature_height_ratio	0.5
+
+s2.s2000.2.2000.6000.2.tick2.hgrid	feature_height_unit	percent
+s2.s2000.2.2000.6000.2.tick2.hgrid	feature_shape	rect
+s2.s2000.2.2000.6000.2.tick2.hgrid	display_feature_label	no
+s2.s2000.2.2000.6000.2.tick2.hgrid	feature_opacity	0.3
+s2.s2000.2.2000.6000.2.tick2.hgrid	feature_shift_y	-80
+s2.s2000.2.2000.6000.2.tick2.hgrid	feature_shift_y_unit	percent
+s2.s2000.2.2000.6000.2.tick2.hgrid	feature_color	green
+
+s2.s2000.2.2000.6000.2.tick2	feature_height_ratio	1
+
+s2.s2000.2.2000.6000.2.tick2	feature_height_unit	percent
 s2.s2000.2.2000.6000.2.tick2	feature_shape	rect
 s2.s2000.2.2000.6000.2.tick2	feature_shift_x	80
 s2.s2000.2.2000.6000.2.tick2	feature_shift_y	-80
@@ -146,8 +290,24 @@ s2.s2000.2.2000.6000.2.tick2	feature_label_size	6
 s2.s2000.2.2000.6000.2.tick2	padding_feature_label	1.8
 s2.s2000.2.2000.6000.2.tick2	feature_label_auto_angle_flag	0
 
+s2.s2000.2.2000.6000.2.tick2	feature_color	green
 
-s2.s2000.2.2000.6000.2.tick3	feature_height_ratio	0.4
+s2.s2000.2.2000.6000.2.tick2	feature_opacity	1
+
+
+s2.s2000.2.2000.6000.2.tick3.hgrid	feature_height_ratio	0.5
+
+s2.s2000.2.2000.6000.2.tick3.hgrid	feature_height_unit	percent
+s2.s2000.2.2000.6000.2.tick3.hgrid	feature_shape	rect
+s2.s2000.2.2000.6000.2.tick3.hgrid	display_feature_label	no
+s2.s2000.2.2000.6000.2.tick3.hgrid	feature_opacity	0.3
+s2.s2000.2.2000.6000.2.tick3.hgrid	feature_shift_y	-90
+s2.s2000.2.2000.6000.2.tick3.hgrid	feature_shift_y_unit	percent
+s2.s2000.2.2000.6000.2.tick3.hgrid	feature_color	green
+
+s2.s2000.2.2000.6000.2.tick3	feature_height_ratio	1
+
+s2.s2000.2.2000.6000.2.tick3	feature_height_unit	percent
 s2.s2000.2.2000.6000.2.tick3	feature_shape	rect
 s2.s2000.2.2000.6000.2.tick3	feature_shift_x	80
 s2.s2000.2.2000.6000.2.tick3	feature_shift_y	-90
@@ -159,4 +319,8 @@ s2.s2000.2.2000.6000.2.tick3	label_rotate_angle	0
 s2.s2000.2.2000.6000.2.tick3	feature_label_size	6
 s2.s2000.2.2000.6000.2.tick3	padding_feature_label	1.8
 s2.s2000.2.2000.6000.2.tick3	feature_label_auto_angle_flag	0
+
+s2.s2000.2.2000.6000.2.tick3	feature_color	green
+
+s2.s2000.2.2000.6000.2.tick3	feature_opacity	1
 
