--- a/example/main.10.conf
+++ b/example/main.10.conf
@@ -122,6 +122,7 @@ plot_depth = hist,s3,s3,2,100,s3.s3.depth.txt,15->70,ytick_flag,20->30->2,ytick_
 #plot_depth = scatter,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 plot_depth = scatter_line,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 plot_depth = hist,s3,s3,3,50,s3.s3.depth.txt,55->90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
+plot_depth = hist,s3,s3,3,50,s3.s3.depth.txt,-55->-90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 
 sr_mapping=s2,s2000,0,path_sr_map.sort.bam,rainbow_or_hline,10->50
 lr_mapping=s2,s2000,0,path_sr_map.sort.bam,rainbow_or_hline,10->50
