--- a/example/main.10.conf
+++ b/example/main.10.conf
@@ -126,6 +126,7 @@ plot_depth = hist,s3,s3,3,50,s3.s3.depth.txt,-55->-90,ytick_flag,10->30->4,ytick
 
 #sr_mapping=s2,s2000,0,path_sr_map.sort.bam,rainbow_or_hline,10->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	highlight_hgrid->26:2:green,28:2:black  start_end_xaxis->61:661,711:1311,1361:1961
 #lr_mapping=s2,s2000,0,path_sr_map.sort.bam,rainbow_or_hline,10->50
+reads_mapping=
 
 
 
