--- a/example/main.10.conf
+++ b/example/main.10.conf
@@ -4,7 +4,7 @@ pdf_dpi = 100
 svg_background_color = white #background color of whole figure
 
 # plot feature type
-feature_keywords = gene,circle,ytick,plot_depth,xxxxx # *, gene,point,hist,heatmap
+feature_keywords = gene,circle,ytick,plot_depth,long_read,xxxxx # *, gene,point,hist,heatmap
 feature_setting = feature.color.label.conf10.new # *
 
 # figure width layout
@@ -116,17 +116,19 @@ scale_tick_fontsize=13
 #depth_hist = s2,s2000,0,100,path_map.sort.bam,0->50,ytick_flag,20->30,ytick_label_text,hgrid_flag,black:black,1:0.3,1:0.5
 #depth_hist = s2,s2000,0,100,path_map.sort.bam,60->90,ytick_flag,20->30,ytick_label_text,hgrid_flag,green:green,1:0.3,1:0.5
 #$sample,$scf,$block_flag,$window_size,$depth_file,$yaxis,$ytick_flag,$yaxis_show,$ytick_label,$hgrid_flag,$tick_color,$tick_opacity,$tick_border,$label_size
+
+
 plot_depth = hist,s3,s3,1,100,s3.s3.depth.txt,5->55,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	highlight_hgrid->26:2:green,28:2:black    highlight_columns->0:20:green:0.7,20:100:black:0.5 start_end_xaxis->111:511,711:1111,1211:1911
 plot_depth = hist,s3,s3,1,100,s3.s3.depth.txt,65->95,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,2:2
 plot_depth = hist,s3,s3,2,100,s3.s3.depth.txt,15->70,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.3:0.3,3:3
+
 #plot_depth = scatter,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 plot_depth = scatter_line,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 plot_depth = hist,s3,s3,3,50,s3.s3.depth.txt,55->90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 plot_depth = hist,s3,s3,3,50,s3.s3.depth.txt,-55->-90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 
-#sr_mapping=s2,s2000,0,path_sr_map.sort.bam,rainbow_or_hline,10->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	highlight_hgrid->26:2:green,28:2:black  start_end_xaxis->61:661,711:1311,1361:1961
-#lr_mapping=s2,s2000,0,path_sr_map.sort.bam,rainbow_or_hline,10->50
-reads_mapping=
+reads_mapping=long_reads,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,23->80,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->3000:4000,4500:5500
+#reads_mapping=long_reads,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,23->80,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->2000:6000
 
 
 
