--- a/example/main.10.conf
+++ b/example/main.10.conf
@@ -1,5 +1,5 @@
 # output figure size
-svg_width_height = 1500,400 # *
+svg_width_height = 1500,1200 # *
 pdf_dpi = 100
 svg_background_color = white #background color of whole figure
 
@@ -125,10 +125,14 @@ plot_depth = hist,1,s3,s3,2,100,s3.s3.depth.txt,15->70,ytick_flag,20->30->2,ytic
 plot_depth = scatter,1,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 plot_depth = scatter_line,1,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 plot_depth = hist,1,s3,s3,3,50,s3.s3.depth.txt,55->90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
-plot_depth = hist,1,s3,s3,3,50,s3.s3.depth.txt,-55->-90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 
-reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,23->80,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->3000:4000,4500:5500
-reads_mapping=long_reads,1,s2,s20000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,23->80,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->2000:6000
+#plot_depth = hist,1,s3,s3,3,50,s3.s3.depth.txt,-55->-90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
+
+plot_depth = hist,1,s2,s2,1,50,../data/s2.seq.sam.sorted.bam,15->80,ytick_flag,10->120->10,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
+
+reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,55->85,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->3000:4000,4500:5500
+#reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,20->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->2000:6000
+#reads_mapping=long_reads,1,s2,s20000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,23->80,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->2000:6000
 
 
 
