--- a/example/main.10.conf
+++ b/example/main.10.conf
@@ -21,13 +21,13 @@ feature_label_color=black
 feature_shift_y=0 # unit is feature_shift_y_unit 
 feature_shift_y_unit=backbone # backbone or radius or percent, backbone is genome_height_ratio
 feature_shift_x=0 # unit is bp
-feature_height_ratio=10 # defined feature height
+feature_height_ratio= 1 # defined feature height
 track_style= fill:blue;opacity:0.2 # fill:blue;stroke:pink;stroke-width:5;fill-opacity:0.1;stroke-opacity:0.9
 feature_color=rgb(50,205,50)
 feature_border_size=0
 feature_border_color=black 
 genome_height_ratio=0.2 # mean genome height extend ratio
-feature_arrow_sharp_extent=5 # bigger mean sharper arrow
+feature_arrow_sharp_extent=0 # bigger mean sharper arrow
 # order for display
 track_order=1
 feature_order=2
@@ -131,8 +131,8 @@ plot_depth = hist,1,s3,s3,3,50,s3.s3.depth.txt,55->90,ytick_flag,10->30->4,ytick
 plot_depth = hist,1,s2,s2,1,50,../data/s2.seq.sam.sorted.bam,15->80,ytick_flag,10->120->10,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 
 reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,55->85,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->3000:4000,4500:5500
-#reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,20->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->2000:6000
-#reads_mapping=long_reads,1,s2,s20000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,23->80,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->2000:6000
+reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,20->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->2000:6000
+reads_mapping=long_reads,1,s2,s20000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,23->80,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->2000:6000
 
 
 
