--- a/example/main.3.2.conf
+++ b/example/main.3.2.conf
@@ -17,10 +17,11 @@ feature_arrow_width_extent=0.3
 feature_label_size=10
 feature_label_color=black
 feature_shift_y=0
-feature_height_ratio=0.9 # defined feature height
+feature_height_ratio=5 # defined feature height
+feature_height_unit=percent
 track_style= fill:blue # green or #02030
 feature_color = rgb(50,205,50)
-genome_height_ratio=1 # mean genome height extend ratio
+genome_height_ratio=5 # mean genome height extend ratio
 feature_arrow_sharp_extent=0.7 # bigger mean sharper arrow
 # order for display
 track_order=1
